--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@
 
 body {
     box-sizing: border-box;
-    background-color: white;
-    font-family: 'Open Sans', Roboto;
+    background-color: rgb(231, 217, 21);
+    font-family: 'Open Sans';
     border: 0;
     padding: 0;
     margin: 0;
@@ -16,17 +16,24 @@ body {
     height: 100%;
 }
 
+main {
+    padding: 3px 20px;
+}
+
 #nav-header {
     list-style: none;
     display: flex;
-    height: 10vh;
-    background-color: rgb(72, 82, 100);
+    width: 100%;
+    height: 80px;
+    background-color: rgb(23, 48, 95);
 }
 
 #nav-footer {
-    display: flex;
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
+    display: flex;
     background-color: rgb(23, 48, 95);
     align-items: center;
     justify-content: center;
@@ -34,7 +41,7 @@ body {
 
 #nav-footer ul li a {
     color: #fff;
-    padding: 35px;
+    padding: 28px;
     display: inline-block;
 }
 
