--- a/index.css
+++ b/index.css
@@ -5,19 +5,24 @@
     border: 0;
 }
 
+html,
 body {
     box-sizing: border-box;
-    background-color: rgb(231, 217, 21);
+    background-color: rgb(255, 255, 255);
     font-family: 'Open Sans';
     border: 0;
     padding: 0;
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 main {
-    padding: 3px 20px;
+    width: 100;
+    height: 100%;
+    /* background: linear-gradient(90deg, rgba(36, 5, 0, 1) 0%, rgba(226, 103, 16, 1) 39%, rgba(255, 222, 0, 0.9948354341736695) 92%); */
+    background: white;
 }
 
 #nav-header {
@@ -28,34 +33,17 @@ main {
     background-color: rgb(23, 48, 95);
 }
 
-#nav-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    background-color: rgb(23, 48, 95);
-    align-items: center;
-    justify-content: center;
-}
-
-#nav-footer ul li a {
+#nav-header ul li a {
+    position: relative;
     color: #fff;
-    padding: 28px;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 25px;
     display: inline-block;
 }
 
-#nav-footer a:hover {
-    background-color: rgb(131, 19, 11);
-}
-
-.menu {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    padding: 0;
-    width: 20%;
-    justify-content: space-evenly;
+#nav-header ul li a:hover {
+    background-color: rgb(30, 59, 139);
 }
 
 .logo {
@@ -67,6 +55,15 @@ main {
     font-size: 25px;
 }
 
+.menu {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    width: 20%;
+    justify-content: space-evenly;
+}
+
 i {
     color: #fff;
 }
@@ -75,34 +72,70 @@ ul li {
     display: inline;
 }
 
-ul li a {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
-    padding: 20px;
-    display: inline-block;
-}
-
-ul li a:hover {
-    background-color: rgb(45, 61, 77);
-}
-
-.box1 {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 3px 10px;
-    font-size: 14px;
-}
-
-.box2 {
-    font-size: 14px;
-}
-
-.box3 {
-    font-size: 14px;
-}
-
-.box-model {
+#welcome-section {
+    background-image: url("https://images.unsplash.com/photo-1598978483528-fd57466ab0ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
+    background-size: cover;
+    background-position: center center;
+    color: red;
+    height: 400px;
+    position: relative;
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 8px 3px;
+}
+
+.box-description {
+    display: flex;
+    width: 100%;
+    height: 350px;
+    /* background-color: moccasin; */
+}
+
+.box-img {
+    width: 300px;
+    height: 300px;
+    margin-top: 10px;
+    margin-left: 260px;
+    border: 1px solid firebrick;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-content {
+    width: 50%;
+    font-size: 12px;
+}
+
+h3 {
+    text-align: center;
+}
+
+#nav-footer {
+    bottom: 0;
+    padding: 5px 0;
+    width: 100%;
+    height: 90px;
+    background-color: rgb(23, 48, 95);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    color: white;
+}
+
+#nav-footer ul li a {
+    color: #fff;
+    padding: 15px 10px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+#nav-footer a:hover {
+    background-color: rgb(30, 59, 139);
 }
